# markdown_demo

./: .gitignore  README.md  pyproject.toml
docs/: tech_stack_decision_records.md  test_traceability.md
src/steelworks_defect/: __init__.py  analysis.py  app.py  bootstrap.py  config.py  db.py  use_cases.py
tests/: test_analysis.py
