[tool.poetry]
name = "steelworks-defect-analysis"
version = "0.1.0"
description = "Recurring defect analysis dashboard for steelworks quality engineering"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "steelworks_defect", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"
psycopg = {version = "^3.2.9", extras = ["binary"]}
streamlit = "^1.41.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
init-db = "steelworks_defect.bootstrap:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
